--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -33,6 +34,7 @@ nav {
 nav>ul {
     display: flex;
     align-items: center;
+    
 
 }
 
@@ -44,4 +46,17 @@ nav li {
 nav a {
     text-decoration: none;
     color: color: var(--Dark-02, #474747);
+}
+header{
+    background: #FFF8F3;
+}
+.banner{
+     padding: 30px 30px 30px 150px ;
+     display: flex;
+      align-items: center;
+
+}
+.banner .profile-picture{
+   
+     width: 500px; 
 }
