--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -111,6 +111,11 @@ banner-content {
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -118,4 +123,11 @@ banner-content {
     background: #FFF8F3;
     margin-top: 130px;
 
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
