--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -168,3 +168,32 @@ main section {
     font-size: 30px;
     font-weight: 700;
 }
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-des,
+.resume-item-institute {
+    color: #757575;
+    margin-bottom: 20px;
+    margin-top: 0; 
+}
+
+.resume-item-title {
+    color: #474747;
+
+    font-size: 30px;
+
+    font-weight: 700;
+    margin-bottom: 10px;
+
+}
+.resume-container{
+    margin: 30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
