--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -178,7 +178,7 @@ main section {
 .resume-item-institute {
     color: #757575;
     margin-bottom: 20px;
-    margin-top: 0; 
+    margin-top: 0;
 }
 
 .resume-item-title {
@@ -190,17 +190,41 @@ main section {
     margin-bottom: 10px;
 
 }
-.resume-container{
+
+.resume-container {
     margin: 30px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
+
 /* footer style */
-footer{
+footer {
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px;
     margin-top: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.contact input[type="text"], .contact input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+
+}
+.social-link a{
+    margin: 25px;
 }
